# AstraNotes

./: .env.example  .gitignore  Next-Steps.md  README.md  README.testing.md  build.js  eslint.config.cjs  index.html  latest.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.storybook/: decorators.tsx  main.ts  mocks.ts  preview-head.html  preview.tsx
docs/: auto-refresh-feature.md  code-documentation.md  development.md  ftrack-api-objects.md  related-versions-feature.md  testing-deduplication.md  testing-guide.md  testing-quickref.md  whats-new-feature.md
scripts/: generate-demo-seed.ts  test-deduplication.sh
src/: App.tsx  index.css  main.tsx  types.d.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/_ARCHIVE/: ftrack.legacy.ts  ftrack.main.ts  ftrack.monolith.ts
src/components/: AppProvider.tsx  EmptyStates.tsx  ErrorBoundary.tsx  MainContent.tsx  MarkdownEditor.tsx  MarkdownRenderer.tsx  MonolithFallbackBanner.tsx  NoteAttachmentViewer.tsx  NoteAttachments.tsx  NoteInput.stories.tsx  NoteInput.tsx  NoteLabelPill.tsx  NoteLabelSelect.tsx  NoteStatusPanel.tsx  OpenPlaylistsBar.tsx  PlaylistList.tsx  PlaylistMenu.tsx  PlaylistModifiedBanner.tsx  PlaylistPanel.tsx  ProjectSelector.tsx  PublishProgressModal.tsx  RelatedNotesModal.tsx  RelatedVersionItem.tsx  RelatedVersionsGrid.tsx  RelatedVersionsList.tsx  RelatedVersionsModal.tsx  ReleaseNotesSuspense.tsx  ShotNoteItem.tsx  (+16 more)
(+193 files in other folders)
